--- a/task3.ipynb
+++ b/task3.ipynb
@@ -29,6 +29,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np"
+    "#THERE IS NO ERROE IN THE CODE BUT WARNINGS ARE GENERATED!!! So view till the end of the code."
    ]
   },
   {
